fix z-index

--- a/static/custom_css/leaflet_custom.css
+++ b/static/custom_css/leaflet_custom.css
@@ -7,8 +7,8 @@
   transform: translateZ(0);
   -webkit-font-smoothing: subpixel-antialiased;
   font-smooth: always; */
-  z-index: 21312312 !important;
-  position: relative !important;
+  /* z-index: 21312312 !important;
+  position: relative !important; */
 }
 
 /* .leaflet-popup-pane {
@@ -41,6 +41,10 @@
   font-size: 10pt !important;
   /* width: 95% !important; */
 }
+
+.leaflet-popup-close-button {
+  display: block !important;
+}
 .leaflet-popup-tip {
   background: rgb(0, 0, 0, 0.92) !important;
   /* backdrop-filter: initial !important;
@@ -61,6 +65,7 @@
   -webkit-backdrop-filter: blur(5px); */
   color: rgb(255, 255, 255, 0.7) !important;
   border-top-left-radius: 2px !important;
+  margin-top: 10px;
 }
 
 .leaflet-control-layers-expanded {
